[gd_scene load_steps=7 format=2]

[ext_resource path="res://Box.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://ColorRect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/static/WorkSans-Light.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Player" type="KinematicBody2D"]
rotation = 3.14159
script = ExtResource( 2 )

[node name="Box" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="BulletContainer" type="GridContainer" parent="."]
margin_left = -41.9966
margin_top = -21.8729
margin_right = 42.0034
margin_bottom = 22.1271
custom_constants/vseparation = 10
custom_constants/hseparation = 68
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" parent="BulletContainer" instance=ExtResource( 3 )]
margin_right = 8.0
margin_bottom = 8.0

[node name="ColorRect2" type="ColorRect" parent="BulletContainer"]
margin_left = 76.0
margin_right = 84.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )

[node name="ColorRect3" type="ColorRect" parent="BulletContainer"]
margin_top = 18.0
margin_right = 8.0
margin_bottom = 26.0
rect_min_size = Vector2( 8, 8 )

[node name="ColorRect4" type="ColorRect" parent="BulletContainer"]
margin_left = 76.0
margin_top = 18.0
margin_right = 84.0
margin_bottom = 26.0
rect_min_size = Vector2( 8, 8 )

[node name="ColorRect5" type="ColorRect" parent="BulletContainer"]
margin_top = 36.0
margin_right = 8.0
margin_bottom = 44.0
rect_min_size = Vector2( 8, 8 )

[node name="ColorRect6" type="ColorRect" parent="BulletContainer"]
margin_left = 76.0
margin_top = 36.0
margin_right = 84.0
margin_bottom = 44.0
rect_min_size = Vector2( 8, 8 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, 14.4388 )
rotation = 1.57079
__meta__ = {
"_gizmo_extents_": 62.0
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.90735e-06, -4.76837e-07 )
scale = Vector2( 3.9, 2.5 )

[node name="Name" type="Label" parent="."]
margin_left = 39.0
margin_top = -31.0
margin_right = 117.0
margin_bottom = -4.0
rect_rotation = 180.0
custom_fonts/font = SubResource( 2 )
text = "Player"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0.530331, 0 )
points = PoolVector2Array( -3.54807, 24.2156, 23.5567, 24.2362, 23.5322, -23.9375, -24.6553, -24.1875, -24.6804, 24.3148, -0.546564, 24.2113, -0.472485, 10.6234 )
width = 1.763
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
antialiased = true

[node name="Timers" type="Node" parent="."]

[node name="RechargeTimer" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="SuperChargeTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="Timers/RechargeTimer" to="." method="_on_RechargeTimer_timeout"]
